dnl Process this file with autoconf to produce a configure script.

AC_INIT(t_pwd.h)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(libtinysrp, 0.7.5)

test "$CFLAGS" = "" && CFLAGS="-O2"

dnl Checks for programs.

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_RANLIB
AC_ARG_PROGRAM

dnl Checks for header files.

AC_HEADER_STDC
AC_CHECK_HEADERS(sgtty.h sys/ioctl.h sys/time.h termio.h termios.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.

AC_C_CONST
AC_C_INLINE
AC_HEADER_TIME
AC_C_BIGENDIAN
AC_CHECK_SIZEOF(short)
AC_CHECK_SIZEOF(int)
AC_CHECK_SIZEOF(long)
AC_CHECK_SIZEOF(long long)
AC_TRY_COMPILE(, [volatile int i;], , AC_DEFINE(volatile, ))
AC_C_CHAR_UNSIGNED

AC_SUBST(signed)dnl
if test "$ac_cv_c_char_unsigned" = "yes"; then
  signed=-signed
fi

dnl Checks for library functions.

AC_CHECK_FUNCS(sigaction strchr memcpy)
TYPE_SIGNAL
AC_HEADER_CHECK(termios.h,AC_FUNC_CHECK(cfsetispeed,AC_DEFINE(POSIX_TERMIOS)))

dnl User options

dnl Some defines for now.

AC_DEFINE(SHA1HANDSOFF)

AC_OUTPUT(Makefile)
